fix mobile z-index issue again

--- a/app/assets/stylesheets/_talk.scss
+++ b/app/assets/stylesheets/_talk.scss
@@ -325,12 +325,7 @@ button,
         height: 16px;
         max-height:16px;
     }
-    &.prelive, &.postlive, &.processing {
-        -webkit-filter: grayscale(100%);
-        filter: grayscale(100%);
-        opacity: .3;
-        pointer-events: none;
-    }
+    
 }
 
 #talk-playbar {
@@ -386,14 +381,38 @@ button,
     }
 }
 .button-pin {
+    font-size: rem-calc(10);
+    font-weight: 300;
     &:hover {
-        background:$vr-yellow;
-        color: $talk-dark;
+        background:$success-color;
+       // color: $talk-dark;
     }
 }
+.button-unpin {
+    font-size: rem-calc(10);
+    font-weight:300;
+    background: $vr-light-blue;
+    &:hover {
+        background:$vr-red;
+    }
 }
 
+}
 
+ .player-container.prelive, 
+ .player-container.postlive, 
+ .player-container.processing {
+
+    .button-play-pause, #meter, .timecode, .timeline {
+
+        -webkit-filter: grayscale(100%);
+        filter: grayscale(100%);
+        opacity: .3;
+        pointer-events: none;
+    
+    }
+
+ }
 
 .muted {
     background: $alert-color;
@@ -796,6 +815,8 @@ ul.share-links {
     height: auto;
     padding: 12px 6px 200px 6px;
     transition: opacity 1s ease;
+    position:relative;
+    z-index: 0;
     @include breakpoint(medium) {
         padding: 12px 6px 48px 6px;
         // max-width: 300px;
